src/App.css
body {
  background-color: black;
  color: white;
}


:root {
  --u: 40px;

  /* --name-w: calc(var(--u) * 2); */
  --slider-w: calc(var(--u) * 3);
  --label-w: calc(var(--u) * 1.5);

  /* --notes-w: calc(var(--u) * 9); */
  /* --octaves-w: calc(var(--u) * 9); */

  /* --sounds-w: calc(var(--u) * 5); */
  /* --intervals-w: calc(var(--u) * 4); */

  /* --line: 1px; */
}

#voice {
  width: fit-content;
  font-size: calc(var(--u) * 0.35);
  padding: 5px;
  border: 2px dotted red;
}

.row {
  display: flex;
}

.justified {
  justify-content: space-between;
}

.column {
  display: flex;
  flex-direction: column;
}


/* row 1 */


.range-slider__thumb::after {  
  content: attr(data-label);  
  /* position: absolute;   */
  /* bottom: calc(50%);    */
  /* transform: translateX(50%);   */
  font-size: 12px;  
  white-space: nowrap;  
  /* margin: auto; */
}

#sliders {
  padding-bottom:5px;
}

.button-label {
  width: var(--label-w);
}


.slider {
  width: var(--slider-w);
  /* margin-left: 5px; */
  /* margin-right: 5px; */
  /* margin-top: 20px; */
  /* margin-bottom: 10px; */
  margin: 10px 5px;
  text-align: center;
}

.slider-label {
  text-align: center;
}

.range-slider .range-slider__thumb {  
  display: flex;  
  align-items: center;  
  justify-content: center;  
}

button img {
  pointer-events: none;
}

.button-group {
  height: 28px;
}

.button-grid {
  display: grid;
}

